--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>datrat</groupId>
     <artifactId>takethis</artifactId>
-    <version>1.20-0.1</version>
+    <version>1.20.x-1.0</version>
     <packaging>jar</packaging>
 
     <name>TakeThis</name>
